Rework user handling; Introduce event handling proto

--- a/FitnessServer/src/main/resources/application.properties
+++ b/FitnessServer/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 #Database connection (local)
-#spring.datasource.url=jdbc:postgresql://localhost:5432/FitnessApp
 #Online test DB
-spring.datasource.url=jdbc:postgresql://docker-dev.autsoft.hu:5432/FitnessApp
-spring.datasource.username=fituser
-spring.datasource.password=fitpassword
+spring.datasource.url=jdbc:postgresql://fitnessapp.c9vyi1usmxjw.us-west-2.rds.amazonaws.com:5432/fitnessapp
+spring.datasource.username=erzsimano
+spring.datasource.password=Balamber7
 
 #JPA
 spring.jpa.hibernate.ddl-auto=update
