--- a/FitnessServer/src/main/resources/application.properties
+++ b/FitnessServer/src/main/resources/application.properties
@@ -4,5 +4,15 @@ spring.datasource.url=jdbc:postgresql://fitnessapp.c9vyi1usmxjw.us-west-2.rds.am
 spring.datasource.username=erzsimano
 spring.datasource.password=Balamber7
 
+#Redis messaging DB
+# Specify the DNS URI of your Redis cache.
+spring.redis.host=91.134.196.66
+
+# Specify the port for your Redis cache.
+spring.redis.port=6379
+
+# Specify the access key for your Redis cache.
+#spring.redis.password=H6yybXrBGFOcEXUuPAVGSAI2k33mWBRprpY7c1Rlz4w=
+
 #JPA
 spring.jpa.hibernate.ddl-auto=update
